--- a/newtrainee1.html
+++ b/newtrainee1.html
@@ -41,7 +41,7 @@
 	        <main>
 	        	<br>
 	        	<h3><b>Personal Details</b></h3>
-				<form>			    
+				<form action="newtrainee2.html">			    
 					<br>		
 				    <div class="md-form">
 					    <i class="fa fa-user prefix black-text"></i>
@@ -68,8 +68,9 @@
 				        <input type="text" class="form-control" placeholder="User Name">
 				    </div>					
 				    <div class="text-center">
-				        <a href="newtrainee2.html" class="btn btn-default">Next</a> 
+				        <button class="btn btn-default">Next</button>
 				    </div>
+				    <div cla
 				    <div class="progress">
 						 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%"> </div>
 					</div>
