--- a/newtrainee2.html
+++ b/newtrainee2.html
@@ -41,7 +41,7 @@
 	        <main>
 	        	<br>
 	        	<h3><b>Personal Indices</b></h3>
-				<form>			    
+				<form action="#">			    
 					<br>		
 				    <div class="md-form">
 					    <i class="fa fa-heartbeat prefix black-text"></i>
@@ -68,7 +68,7 @@
 				        <input type="text" class="form-control" placeholder="Goals">
 				    </div>					
 				    <div class="text-center">
-				        <button class="btn btn-default">Submit<a href="#"></a></button>
+				        <button class="btn btn-default">Submit</button>
 				    </div>
 				    <div class="progress">
 						 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%"> </div>
