--- a/newtrainee2.html
+++ b/newtrainee2.html
@@ -85,7 +85,7 @@
 					<div>
 					<strong>Success!</strong><br>Create Account and email sent to user successfully.
 					</div>
-					<button id="ok" class="btn btn-default">Ok</button>
+					<button id="ok" class="btn btn-default"><a href="training_suggestions.html">Ok</a></button>
                 </section>
 	        </main>
 	
