--- a/training_suggestions.html
+++ b/training_suggestions.html
@@ -40,7 +40,7 @@
 	        	<section id="breadcrumbs">
                     <ul>
                         <li><a href="index.html">Home</a></li> >
-                        <li><a href="trainers.html">Trainres</a></li> >
+                        <li><a href="trainers.html">Trainers</a></li> >
                         <li><a href="#">Trainees</a></li> >
                         <li><a href="#">hertzel yona</a></li> >
                         <li><a href="Training_suggestions.html">Training suggestions</a></li>
