--- a/custom_workout.html
+++ b/custom_workout.html
@@ -43,9 +43,10 @@
 	        	<section id="breadcrumbs">
                     <ul>
                         <li><a href="index.html">Home</a></li> >
-                        <li><a href="trainers.html">Trainres</a></li> >
+                        <li><a href="trainers.html">Trainers</a></li> >
                         <li><a href="#">Trainees</a></li> >
                         <li><a href="#">hertzel yona</a></li> >
+                        <li><a href="training_suggestions.html">Training Programs</a></li> >
                         <li><a href="costum_workout.html">Costum Workout</a></li>
                     </ul>                 
                 </section>
