--- a/newtrainee2.html
+++ b/newtrainee2.html
@@ -40,7 +40,7 @@
 	        	<section id="breadcrumbs">
                     <ul>
                         <li><a href="index.html">Home</a></li> >
-                        <li><a href="trainers.html">Trainres</a></li> >
+                        <li><a href="trainers.html">Trainers</a></li> >
                         <li><a href="Newtrainee1.html">Personal Details</a></li> >
                         <li><a href="Newtrainee2.html">Personal Indices</a></li>
                     </ul>
