--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
                     
                 </section>
                 
-				<form action="newtrainee1.html" class="login loginform">
+				<form action="trainers.html" class="login loginform">
 					<h3><b>Trainer</b></h3>
 				    <div class="md-form">
 				        <i class="fa fa-user prefix black-text"></i>
