--- a/newtrainee2.html
+++ b/newtrainee2.html
@@ -29,8 +29,8 @@
                     <ul>
                         <li><a href="index.html">Home</a></li> >
                         <li><a href="trainers.html">Trainers</a></li> >
-                        <li><a href="Newtrainee1.html">Personal Details</a></li> >
-                        <li><a href="Newtrainee2.html">Personal Indices</a></li>
+                        <li><a href="newtrainee1.html">Personal Details</a></li> >
+                        <li><a href="newtrainee2.html">Personal Indices</a></li>
                     </ul>
                     
                 </section>
