--- a/newtrainee1.html
+++ b/newtrainee1.html
@@ -29,7 +29,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li> >
                         <li><a href="trainers.html">Trainers</a></li> >
-                        <li><a href="Newtrainee1.html">Personal Details</a></li>
+                        <li><a href="newtrainee1.html">Personal Details</a></li>
                     </ul>                 
                 </section>
                 
