--- a/custom_workout.html
+++ b/custom_workout.html
@@ -4,6 +4,7 @@
  
 	<head>
 		<title>Costum Workout</title>
+		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<link rel="stylesheet" href="includes/style.css">
 		<script src="includes/jquery-3.2.1.min.js"></script>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.4.3/css/mdb.min.css" />
