--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html>
  
 	<head>
-		<title>Index</title>
+		<title>Workout Tracker</title>
+		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<link rel="stylesheet" href="includes/style.css">
 		<script src="includes/jquery-3.2.1.min.js"></script>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.4.3/css/mdb.min.css" />
@@ -22,12 +23,10 @@
 				</article>  
 	        </header>
 	
-	        <nav>
+	        <nav id="nav">
 	        	<ul>
-	        		<li><a href="index.html">HOME</a></li>
-	        		<li><a href="trainers.html">TRAINERS</a></li>
+	        		<li><a href="index.html">DASHBOARD</a></li>
 	        		<li><a href="#">WORKOUT</a></li>
-	        		<li><a href="#">CONTACT</a></li>
 	        		<li><a href="login.html">LOGIN</a></li>
 	        		<li>
 	        			<div class="search-container">
@@ -37,6 +36,28 @@
 	        		</li>
 	        	</ul>
 	        </nav>
+	      	<nav id="navmobile">
+	      		<ul>
+	      			<li>
+	      				<button data-toggle="collapse" data-target="#collapse">
+	      					<span class="navbar-toggler-icon"></span>
+	      				</button>
+	      			</li>
+	      		
+	      			<div id="collapse">
+	      				<ul id="collapse-ul">
+	      					<li><a href-"#">Profile</a></li>
+	      					<li><a href-"#">Inbox</a></li>
+	      					<li><a href-"#">My Plan</a></li>
+	      					<li><a href-"#">Workouts</a></li>
+	      					<li><a href-"#">Settings</a></li>
+	      					<li><a href-"#">Log out</a></li>
+	      				</ul>
+	      			</div>
+	        		<li><a href="#">Workouts</a></li>
+	        		<li><a href="index.html">My Plan</a></li>
+	      		</ul>
+	      	</nav>
 	
 	        <main>
 
