--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
  
 	<head>
 		<title>Login</title>
+		<meta name="viewport" content="width=device-width">
 		<link rel="stylesheet" href="includes/style.css">
 		<script src="includes/jquery-3.2.1.min.js"></script>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.4.3/css/mdb.min.css" />
@@ -41,7 +42,7 @@
 	        <main>
 	        	<section id="breadcrumbs">
                     <ul>
-                        <li><a href="index.html">Home</a></li>>
+                        <li><a href="index.html">Home</a></li> >
                         <li><a href="login.html">Login</a></li>
                     </ul>
                     
@@ -51,11 +52,11 @@
 					<h3><b>Trainer</b></h3>
 				    <div class="md-form">
 				        <i class="fa fa-user prefix black-text"></i>
-				        <input type="text" id="defaultForm-email" required="" class="form-control" placeholder="User Name">
+				        <input type="text" required="" class="form-control" placeholder="User Name">
 				    </div>			
 				    <div class="md-form">
 				        <i class="fa fa-lock prefix black-text"></i>
-				        <input type="password" id="defaultForm-pass" required="" class="form-control" placeholder="Password">
+				        <input type="password" required="" class="form-control" placeholder="Password">
 				    </div>			
 				     <div class="text-center">
 				        <button class="btn btn-default">Login</button>
@@ -66,11 +67,11 @@
 					<h3><b>Trainee</b></h3>	
 				    <div class="md-form">
 				        <i class="fa fa-user prefix black-text"></i>
-				        <input type="text" id="defaultForm-email" required="" class="form-control" placeholder="User Name">
+				        <input type="text" required="" class="form-control" placeholder="User Name">
 				    </div>			
 				    <div class="md-form">
 				        <i class="fa fa-lock prefix black-text"></i>
-				        <input type="password" id="defaultForm-pass" required="" class="form-control" placeholder="Password">
+				        <input type="password" required="" class="form-control" placeholder="Password">
 				    </div>			
 				      <div class="text-center">
 				        <button class="btn btn-default">Login</button>
