--- a/newtrainee2.html
+++ b/newtrainee2.html
@@ -4,6 +4,7 @@
  
 	<head>
 		<title>NewTrainee2</title>
+		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<link rel="stylesheet" href="includes/style.css">
 		<script src="includes/jquery-3.2.1.min.js"></script>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.4.3/css/mdb.min.css" />
@@ -87,7 +88,7 @@
 					<div>
 					<strong>Success!</strong><br>Create Account and email sent to user successfully.
 					</div>
-					<button id="ok" class="btn btn-default"><a href="training_suggestions.html">Ok</a></button>
+					<button class="btn btn-default"><a href="training_suggestions.html">Ok</a></button>
                 </section>
 	        </main>
 	
